--- a/newjourneys.html
+++ b/newjourneys.html
@@ -2,7 +2,7 @@
 <head>
 	<link rel="manifest" href="/manifest.json">
     <script type="text/javascript">
-     var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[], privacy:[], region:'sk1-dashboard-staging-3'};
+     var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[], privacy:[], region:'sk1'};
  // replace with the CLEVERTAP_ACCOUNT_ID with the actual ACCOUNT ID value from your Dashboard -> Settings page
 clevertap.account.push({"id": "R74-K7W-475Z"});
 clevertap.privacy.push({optOut: false}); //set the flag to true, if the user of the device opts out of sharing their data
