--- a/segment.html
+++ b/segment.html
@@ -5,5 +5,6 @@
   analytics.page();
   }}();
 </script>
+  <a href="http://shahharsh093.github.io/unsub.html?utm_source=test&utm_medium=test&utm_campaign=test">Referrer test</a>
 </body>
 </html>
