--- a/unsub.html
+++ b/unsub.html
@@ -11,7 +11,7 @@ clevertap.privacy.push({useIP: false}); //set the flag to true, if the user agre
 		 var wzrk = document.createElement('script');
 		 wzrk.type = 'text/javascript';
 		 wzrk.async = true;
-		 wzrk.src = 'https://raw.githubusercontent.com/shahharsh093/shahharsh093.github.io/master/namshia.js';
+		 wzrk.src = '/namshia.js';
 		 var s = document.getElementsByTagName('script')[0];
 		 s.parentNode.insertBefore(wzrk, s);
   })();
