--- a/unsub.html
+++ b/unsub.html
@@ -2,7 +2,7 @@
 <head>
 	<link rel="manifest" href="/manifest.json">
     <script type="text/javascript">
-     var clevertap = {event:[], profile:[], account:[],region: 'eu1', onUserLogin:[], notifications:[], privacy:[]};
+     var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[], privacy:[]};
  // replace with the CLEVERTAP_ACCOUNT_ID with the actual ACCOUNT ID value from your Dashboard -> Settings page
 clevertap.account.push({"id": "W67-774-7Z5Z"});
 clevertap.privacy.push({optOut: false}); //set the flag to true, if the user of the device opts out of sharing their data
