--- a/tealium.html
+++ b/tealium.html
@@ -5,15 +5,16 @@
 <body>
 
 <!-- Standard/required to declare window.tealium and set config. This must execute before any tealium.track calls -->
+<!-- Standard/required to declare window.tealium and set config. This must execute before any tealium.track calls -->
 <script type="text/javascript">
   (function(t,e,a,l,i,u,m,j,s){
     m=function(o,p,q){j.q.push([o,p,q])};j=u[i]={q:[],config:function(n,d)
     {m("config",n,d)},track:function(n,d){m("track",n,d)},debug:function(n)
     {m("debug",n)}};s=function(){u[i]=Tealium(j.q)};j.config("init",
     [t,e,a,l]);if(u.Tealium&&u.TEAL&&u.TEAL[t+"/"+e+"/"+l]){s()}else{j.callback=s}
-  })("growthwave-sandbox","di-aaqib","prod","rfuchs","tealium",window);
+  })("growthwave-sandbox","di-aaqib","prod","7km6s7","tealium",window);
 </script>
-<script async src="https://tags.tiqcdn.com/tms/growthwave-sandbox/di-aaqib/prod/rfuchs/tealium.js"></script>
+<script async src="https://tags.tiqcdn.com/tms/growthwave-sandbox/di-aaqib/prod/7km6s7/tealium.js"></script>
 <script type="text/javascript">
   // Tracking call may be included directly in page source here,
   // or for Single Page Apps (SPAs) it is included in app logic
