--- a/tealium.html
+++ b/tealium.html
@@ -15,7 +15,22 @@
   })("growthwave-sandbox","di-aaqib","prod","7km6s7","tealium",window);
 </script>
 <script async src="https://tags.tiqcdn.com/tms/growthwave-sandbox/di-aaqib/prod/7km6s7/tealium.js"></script>
+
+  
+  <script type="text/javascript">
+    utag_data = {"site_region":"en_US","site_currency":"USD","page_name":"Tealium Ecommerce Demo","page_type":"cms page","tealium_event":"page_view","country_name":"unknown","country_code":"unknown"};
+</script>
+<!-- ****************************************** --><!-- Async Load of Tealium utag.js library -->
 <script type="text/javascript">
+        (function(a,b,c,d){
+        a='//tags.tiqcdn.com/utag/tealiumlabs/commerce/prod/utag.js';
+        b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.
+        async=true;
+        a=b.getElementsByTagName(c)[0];a.parentNode.insertBefore(d,a);
+        })();
+</script>
+  
+  <script type="text/javascript">
   // Tracking call may be included directly in page source here,
   // or for Single Page Apps (SPAs) it is included in app logic
   tealium.track( "Content Viewed", { page_name : "Hello World!" } ); // Sending your first event!"
