--- a/tealium.html
+++ b/tealium.html
@@ -3,7 +3,7 @@
 
 </head>
 <body>
-  <p>Welcome CT</p>
+  <p>Welcome CT | Web</p>
 <!-- Standard/required to declare window.tealium and set config. This must execute before any tealium.track calls -->
 <!-- Standard/required to declare window.tealium and set config. This must execute before any tealium.track calls -->
 <script type="text/javascript">
