--- a/tealium.html
+++ b/tealium.html
@@ -11,7 +11,7 @@
 <script async src="https://tags.tiqcdn.com/tms/growthwave-sandbox/di-aaqib/prod/7km6s7/tealium.js"></script>
 </head>
 <body>
-  <p>Welcome CT | Web</p>
+  <p>Welcome CT | Web | 3 tags</p>
 <!-- Standard/required to declare window.tealium and set config. This must execute before any tealium.track calls -->
 <!-- Standard/required to declare window.tealium and set config. This must execute before any tealium.track calls -->
 
