--- a/tealium.html
+++ b/tealium.html
@@ -1,57 +1,29 @@
 <html>
 <head>
-<script type="text/javascript">
-  (function(t,e,a,l,i,u,m,j,s){
-    m=function(o,p,q){j.q.push([o,p,q])};j=u[i]={q:[],config:function(n,d)
-    {m("config",n,d)},track:function(n,d){m("track",n,d)},debug:function(n)
-    {m("debug",n)}};s=function(){u[i]=Tealium(j.q)};j.config("init",
-    [t,e,a,l]);if(u.Tealium&&u.TEAL&&u.TEAL[t+"/"+e+"/"+l]){s()}else{j.callback=s}
-  })("growthwave-sandbox","di-aaqib","prod","7km6s7","tealium",window);
-</script>
-<script async src="https://tags.tiqcdn.com/tms/growthwave-sandbox/di-aaqib/prod/7km6s7/tealium.js"></script>
+
 </head>
 <body>
-  <p>Welcome CT | Web | 3 tags</p>
-<!-- Standard/required to declare window.tealium and set config. This must execute before any tealium.track calls -->
-<!-- Standard/required to declare window.tealium and set config. This must execute before any tealium.track calls -->
-
-
-  
-  <script type="text/javascript">
-    utag_data = {"site_region":"en_US","site_currency":"USD","page_name":"Tealium Ecommerce Demo","page_type":"cms page","tealium_event":"page_view","country_name":"unknown","country_code":"unknown"};
-</script>
-<!-- ****************************************** --><!-- Async Load of Tealium utag.js library -->
+  <!-- Standard/required to declare window.tealium and set config. This must execute before any 
 <script type="text/javascript">
-        (function(a,b,c,d){
-        a='//tags.tiqcdn.com/utag/tealiumlabs/commerce/prod/utag.js';
-        b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.
-        async=true;
-        a=b.getElementsByTagName(c)[0];a.parentNode.insertBefore(d,a);
-        })();
-</script>
-  
-  <script type="text/javascript">
-  // Tracking call may be included directly in page source here,
-  // or for Single Page Apps (SPAs) it is included in app logic
-  tealium.track( "Content Viewed", { page_name : "Hello World!" } ); // Sending your first event!"
-</script>
-  
-  <script type="text/javascript">
 (function(t,e,a,l,i,u,m,j,s){
 m=function(o,p,q){j.q.push([o,p,q])};j=u[i]={q:[],config:function(n,d)
 {m("config",n,d)},track:function(n,d){m("track",n,d)},debug:function(n)
 {m("debug",n)}};s=function(){u[i]=Tealium(j.q)};j.config("init",
 [t,e,a,l]);if(u.Tealium&&u.TEAL&&u.TEAL[t+"/"+e+"/"+l]){s()}else{j.callback=s}
-})("growthwave-sandbox","di-aaqib","prod","do7g5u","tealium",window);
+})("growthwave-sandbox","di-aaqib","prod","7km6s7","tealium",window);
 </script>
-<script async src="https://tags.tiqcdn.com/tms/growthwave-sandbox/di-aaqib/prod/do7g5u/
+
+<script async src="https://tags.tiqcdn.com/tms/growthwave-sandbox/di-aaqib/prod/7km6s7/
 tealium.js"></script>
+
+
 <script type="text/javascript">
 // Tracking call may be included directly in page source here,
 // or for Single Page Apps (SPAs) it is included in app logic
 tealium.track( "Content Viewed", { page_name : "Hello World!" } ); // Sending your
 first event!"
 </script>
+ 
 
 </body>
 </html>
