--- a/tealium.html
+++ b/tealium.html
@@ -3,6 +3,8 @@
 
 </head>
 <body>
+  <p>Single tag</p>
+  
   <!-- Standard/required to declare window.tealium and set config. This must execute before any 
 <script type="text/javascript">
 (function(t,e,a,l,i,u,m,j,s){
