--- a/group-unsub.html
+++ b/group-unsub.html
@@ -17,7 +17,7 @@
 <div>    
    <h4>I want to unsubscribe from future emails
    </h4>        
-   <input type=“text” id=“email” readonly=“readonly” />      
+   <input type="text" id="email" readonly="readonly" />      
    <br/><br/>
    <button onclick=\"changeSubscriptionGroups()\">Update Subscription Groups</button>    
 </div>  
