--- a/group-unsub.html
+++ b/group-unsub.html
@@ -41,7 +41,7 @@
  }
   function changeSubscriptionGroups(){
     var isRencoded = false;// Fetch the updated groups data here. Format will be the same as recieved in the payload  with updated values
-    var updated_groups = ...
+    // var updated_groups = ...
     $WZRK_WR.changeSubscriptionGroups(isRencoded, updated_groups);
     } 
   function wzrk_email_subscription(status) {  
