--- a/group-unsub.html
+++ b/group-unsub.html
@@ -28,7 +28,7 @@
   {
     $WZRK_WR.getEmail(isReEncode,withGroups);
   };
-  function wzrk_email_fetched(emailStr, profile) {                document.getElementById(“email”).value = emailStr;                setGroups(profile);// will be called after the email id of the user has been fetched    
+  function wzrk_email_fetched(emailStr, profile) {                document.getElementById("email").value = emailStr;                setGroups(profile);// will be called after the email id of the user has been fetched    
  }
  function setGroups(profile) {
    if(!profile || !profile.groups || profile.groups.length === 0) {                 return;                                                                  }
@@ -41,16 +41,16 @@
  }
   function changeSubscriptionGroups(){
     var isRencoded = false;// Fetch the updated groups data here. Format will be the same as recieved in the payload  with updated values
-    // var updated_groups = ...
+    var updated_groups = '';
     $WZRK_WR.changeSubscriptionGroups(isRencoded, updated_groups);
     } 
   function wzrk_email_subscription(status) {  
     // will be called after the subscription preferences for the user have been updated   
-    var statusLabel = ‘subscribed’;        
+    var statusLabel = 'subscribed';        
     if (status == 0) {
-      statusLabel = ‘unsubscribed’;
+      statusLabel = 'unsubscribed';
     }//status 0 : unsubscribed, status 1 : subscribed        
-    alert(“You’ve been ” + statusLabel);    
+    alert("You’ve been " + statusLabel);    
   } // call this function to unsubscribe the user 
   }
   ]
