--- a/group-unsub.html
+++ b/group-unsub.html
@@ -11,6 +11,16 @@
          var s = document.getElementsByTagName('script')[0];
          s.parentNode.insertBefore(wzrk, s);
   })();
+  
+  
+  clevertap.notificationCallback = function(msg){
+      //raise the notification viewed and clicked events in the callback
+      clevertap.raiseNotificationViewed();
+      var msg = msg;
+      console.log(JSON.stringify(msg));//your custom rendering implementation here
+      
+};
+  
 </script> 
  </script>
  <div>    
