--- a/newajs.html
+++ b/newajs.html
@@ -106,6 +106,7 @@ clevertap.privacy.push({useIP: false}); //set the flag to true, if the user agre
         alert("You've been " + statusLabel);
     }
  </script>
+<script src="https://m6853sjypfcc.statuspage.io/embed/script.js"></script>
 
 
 
