--- a/branchclevertap.html
+++ b/branchclevertap.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-  <title>Tealium CleverTap Demo HTML Page</title>
+  <title>Branch CleverTap Demo HTML Page</title>
   <style>
   @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700italic);
 
@@ -173,7 +173,7 @@ var utag_data = {
     })();
 </script>
 
-<h1>CleverTap Branch Demo</h1>
+<h1> Branch CleverTap Demo</h1>
 <!-- 
 <p>The script is generated dynamically based on your configuration selections 
 and includes your Data Layer. The Data Layer is generated from the variables 
