--- a/branchclevertap.html
+++ b/branchclevertap.html
@@ -195,10 +195,10 @@ the code after the opening BODY tag.</li>
 
   <div class="main">
     <div class="sub-main">
-      <button class="button-one">Flight Searched</button>
+      <button class="button-one">Searched</button>
     </div>
     <div class="sub-main">
-      <button class="button-one">Hotel Booked</button>
+      <button class="button-one">Added to Cart</button>
     </div>
     <div class="sub-main">
       <button class="button-three">Trip Completed</button>
