--- a/pepipostunsub.html
+++ b/pepipostunsub.html
@@ -8,7 +8,7 @@
     // Copy and paste the below code snippet inside the <head></head> section of your website
 
 <script type="text/javascript">
-     var clevertap = {event:[], profile:[], region : 'sk1-dashboard-staging-6', account:[], onUserLogin:[], notifications:[]};
+     var clevertap = {event:[], profile:[], region : 'sk1', account:[], onUserLogin:[], notifications:[]};
  // replace with the CLEVERTAP_ACCOUNT_ID with the actual ACCOUNT ID value from your Dashboard -> Settings page
  clevertap.account.push({"id": "W6W-797-865Z"});
  (function () {
