--- a/group-unsub.html
+++ b/group-unsub.html
@@ -1,8 +1,8 @@
  <script type="text/javascript">
      
-     var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[]};
+     var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[], region:'sk1'};
  // replace with the CLEVERTAP_ACCOUNT_ID with the actual ACCOUNT ID value from your Dashboard -> Settings page
- clevertap.account.push({"id": "W67-774-7Z5Z"});
+ clevertap.account.push({"id": "W8W-897-865Z"});
  (function () {
          var wzrk = document.createElement('script');
          wzrk.type = 'text/javascript';
